fix: fix flicker on css animation (refresh button & lobby list item click)

--- a/react_main/src/css/main.css
+++ b/react_main/src/css/main.css
@@ -12,6 +12,11 @@
   --hoverTransition: 0.2s;
 }
 
+* {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
 .light-mode {
   --scheme-color: #fff;
   --scheme-color-sec: #f3f3f3;
